--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -50,6 +50,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   json_serializable: ^6.6.2
   build_runner: ^2.3.3
+  generators:
+    path: ../generators
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
